--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="wrapper_nav">
+            <nav class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
                     <span></span>
@@ -31,10 +31,10 @@
                     <li><a href="features.html" class="nav_items">Features</a></li>
                     <li><a href="contacts.html" class="nav_items">Contacts</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
         <div class="container_contacts">
-            <h1 class="heading_contacts">Contact us for all questions of interest:</h1>
+            <h1 class="heading_name">Contact us for all questions of interest:</h1>
             <div class="wrapper_contacts">
                 <ul class="contacts_tel">
                     <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span>
@@ -57,13 +57,13 @@
         <div class="container_name">
             <h2 class="footer_name">BOSCO</h2>
         </div>
-        <div class="navigation">
+        <nav class="navigation">
             <a href="menu.html" class="nav_items">Menu</a>
             <a href="reservation.html" class="nav_items">Reservations</a>
             <a href="index.html" class="nav_items">News</a>
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
-        </div>
+        </nav>
         <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
