--- a/features.html
+++ b/features.html
@@ -20,7 +20,7 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="wrapper_nav">
+            <nav class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
                     <span></span>
@@ -31,18 +31,18 @@
                     <li><a href="features.html" class="nav_items">Features</a></li>
                     <li><a href="contacts.html" class="nav_items">Contacts</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
 
         <div class="container_heading">
-            <h1 class="heading_style">Why are we the most popular restaurant in the city?</h1>
+            <h1 class="heading_name">Why are we the most popular restaurant in the city?</h1>
             <p class="description_style">The best European food from famous chefs is here. Combined with a unique
                 location and welcoming s ervice, this creates an unforgettable atmosphere. National flavor is present in
                 everything: interior, staff, cuisine, music.</p>
         </div>
 
         <div class="container_title">
-            <h1 class="heading_style">Our main features</h1>
+            <h1 class="heading_name main_name">Our main features</h1>
         </div>
 
         <div class="wrapper_features">
@@ -76,7 +76,7 @@
         </div>
 
         <div class="container_title">
-            <h1 class="heading_bottom">We will be happy to serve you everyday of the week
+            <h1 class="bottom_name">We will be happy to serve you everyday of the week
                 from 09:00 to 22:00
             </h1>
         </div>
@@ -86,13 +86,13 @@
         <div class="container_name">
             <h2 class="footer_name">BOSCO</h2>
         </div>
-        <div class="navigation">
+        <nav class="navigation">
             <a href="menu.html" class="nav_items">Menu</a>
             <a href="reservation.html" class="nav_items">Reservations</a>
             <a href="index.html" class="nav_items">News</a>
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
-        </div>
+        </nav>
         <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
