--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="wrapper_nav">
+            <nav class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
                     <span></span>
@@ -32,26 +32,26 @@
                     <li><a href="features.html" class="nav_items">Features</a></li>
                     <li><a href="contacts.html" class="nav_items">Contacts</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
         <div class="container_welcome">
-            <h1 class="welcome">Welcome</h1>
-            <h1 class="heading_name">BOSCO</h1>
-            <h1 class="ready">Ready to open</h1>
+            <h1 class="welcome_name">Welcome</h1>
+            <h1 class="main_name">BOSCO</h1>
+            <h1 class="ready_name">Ready to open</h1>
         </div>
     </header>
 
     <main>
         <section class="container_story">
             <div class="wrapper_story">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">our story</p>
-                <p class="desc">
+                <h2 class="disc_name">Discover</h2>
+                <p class="article_name">our story</p>
+                <p class="desc_name">
                     Bosco is a restaurant, bar and coffee roastery located on a busy corner site
                     in Farrington’s Market. With glased frontage on two sides of the building?
                     overlooking the market and abustiling city intersection.
                 </p>
-                <div class="link_underline"><a href="features.html" class="view">About our story</a></div>
+                <div class="link_underline"><a href="features.html" class="view_name">About our story</a></div>
             </div>
             <div class="fish_img">
                 <img src="images/fish.png" alt="fish" class="fish" />
@@ -73,14 +73,14 @@
                 <img src="/images/steak.png" alt="steak" class="food_items" />
             </div>
             <div class="wrapper_menu">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">menu</p>
-                <p class="desc">
+                <h2 class="disc_name">Discover</h2>
+                <p class="article_name">menu</p>
+                <p class="desc_name">
                     For those with pure food indulgense in mind, come next door and sate
                     your desires with our ever changing internationally and seasonally
                     inspired small plates. We love food, lots of different food, just like you.
                 </p>
-                <div class="link_underline"><a href="menu.html" class="view">View the full menu</a></div>
+                <div class="link_underline"><a href="menu.html" class="view_name">View the full menu</a></div>
             </div>
         </section>
 
@@ -93,14 +93,14 @@
 
         <section class="container_reservation">
             <div class="reservation">
-                <h2 class="disc">Culinary</h2>
-                <p class="name_article">delight</p>
-                <p class="desc">
+                <h2 class="disc_name">Culinary</h2>
+                <p class="article_name">delight</p>
+                <p class="desc_name">
                     We promise in intimate and relax dining experience that offers something
                     different to local and foreign patrons and ensures you enjoy a memorible
                     food experience every time.
                 </p>
-                <div class="link_underline"><a href="reservation.html" class="view">Make a reservation</a></div>
+                <div class="link_underline"><a href="reservation.html" class="view_name">Make a reservation</a></div>
             </div>
             <div class="reservation_img">
                 <img src="/images/cancer.png" alt="cancer" class="res_img" />
@@ -113,13 +113,13 @@
         <div class="container_name">
             <h2 class="footer_name">BOSCO</h2>
         </div>
-        <div class="navigation">
+        <nav class="navigation">
             <a href="menu.html" class="nav_items">Menu</a>
             <a href="reservation.html" class="nav_items">Reservations</a>
             <a href="index.html" class="nav_items">News</a>
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
-        </div>
+        </nav>
         <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
