--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
             <div class="container_logo">
                 <a href="index.html" class="logo">BOSCO</a>
             </div>
-            <div class="wrapper_nav">
+            <nav class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
                     <span></span>
@@ -31,11 +31,11 @@
                     <li><a href="features.html" class="nav_item">Features</a></li>
                     <li><a href="contacts.html" class="nav_item">Contacts</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
         <div class="container_cover">
             <div class="wrapper_cover">
-                <h1 class="heading_menu title_menu">Menu</h1>
+                <h1 class="heading_name title_name">Menu</h1>
                 <p class="text_cover">The menu concept is based on the selection of products that meet our
                     understanding of quality standards. When creating a dish, we
                     combine modern and classical methods, taking into account the
@@ -55,7 +55,7 @@
                 <img src="images/pizza.png" alt="pizza" class="pizza_pic" />
             </div>
             <div class="wrapper_pizza">
-                <h1 class="heading_menu">Pizza</h1>
+                <h1 class="heading_name">Pizza</h1>
                 <ul class="price_list">
                     <li>
                         <h3 class="name_price">La Cipolla<span>20$</span></h3>
@@ -76,9 +76,7 @@
                     <li>
                         <h3 class="name_price">Calzone<span>20$</span></h3>
                         <p class="composition">Pizza wrapped in an envelope with chicken breast, broccoli, sour
-                            cream,
-                            red onion and Peperoni
-                            sausage.</p>
+                            cream, red onion and Peperoni sausage.</p>
                     </li>
                     <li>
                         <h3 class="name_price">Buffalo<span>23$</span></h3>
@@ -90,7 +88,7 @@
 
         <section class="container_salad">
             <div class="wrapper_salad">
-                <h1 class="heading_menu">Salads</h1>
+                <h1 class="heading_name">Salads</h1>
                 <ul class="price_list">
                     <li>
                         <h3 class="name_price">Commander squid salad<span>10$</span></h3>
@@ -133,7 +131,7 @@
                 <img src="images/dishes.png" alt="dishes" class="main_dish" />
             </div>
             <div class="wrapper_dishes">
-                <h1 class="heading_dish">Signature dishes</h1>
+                <h1 class="dish_name">Signature dishes</h1>
                 <span class="line_dish"></span>
                 <ul class="price_list">
                     <li>
@@ -170,28 +168,28 @@
 
         <section class="container_sauces">
             <div class="wrapper_sauces">
-                <h1 class="heading_menu sauce">Sauces</h1>
+                <h1 class="heading_name">Sauces</h1>
                 <ul class="price_list">
                     <li>
-                        <h3 class="name_price">Hot mustard<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Hot mustard<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">Spicy garlic sauce<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Spicy garlic sauce<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">Chili sauce sweet<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Chili sauce sweet<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">German mustard<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">German mustard<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">Barbecue sauce<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Barbecue sauce<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">Creamy horseradish<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Creamy horseradish<span class="sauce_margin">3$</span></h3>
                     </li>
                     <li>
-                        <h3 class="name_price">Wasabi sauce<span class="img_sauce_margin">3$</span></h3>
+                        <h3 class="name_price">Wasabi sauce<span class="sauce_margin">3$</span></h3>
                     </li>
                 </ul>
             </div>
@@ -201,91 +199,91 @@
         </section>
 
         <section class="container_drinks">
-            <h1 class="heading_menu drinks">Drinks</h1>
+            <h1 class="heading_name drinks_name">Drinks</h1>
             <div class="container_coffee_tea">
                 <div class="wrapper_tea_coffee">
-                    <h2 class="coffee_tea">Coffee</h2>
+                    <h2 class="coffee_tea_name">Coffee</h2>
                     <ul class="price_list">
                         <li>
-                            <h3 class="name_price">Cappuccino<span>5$</span></h3>
+                            <h3 class="name_price">Cappuccino<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Latte<span>6$</span></h3>
+                            <h3 class="name_price">Latte<span class="coffee_tea_margin">6$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Raf<span>5$</span></h3>
+                            <h3 class="name_price">Raf<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Flat white<span>5$</span></h3>
+                            <h3 class="name_price">Flat white<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Doppio<span>5$</span></h3>
+                            <h3 class="name_price">Doppio<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Irish<span>4$</span></h3>
+                            <h3 class="name_price">Irish<span class="coffee_tea_margin">4$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Coretto<span>6$</span></h3>
+                            <h3 class="name_price">Coretto<span class="coffee_tea_margin">6$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Romano<span>5$</span></h3>
+                            <h3 class="name_price">Romano<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Lungo<span>7$</span></h3>
+                            <h3 class="name_price">Lungo<span class="coffee_tea_margin">7$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Con panna<span>7$</span></h3>
+                            <h3 class="name_price">Con panna<span class="coffee_tea_margin">7$</span></h3>
                         </li>
                     </ul>
                 </div>
                 <div class="wrapper_tea_coffee">
-                    <h2 class="coffee_tea">Tea</h2>
+                    <h2 class="coffee_tea_name">Tea</h2>
                     <ul class="price_list">
                         <li>
-                            <h3 class="name_price">Green tea<span>3$</span></h3>
+                            <h3 class="name_price">Green tea<span class="coffee_tea_margin">3$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Black tea<span>3$</span></h3>
+                            <h3 class="name_price">Black tea<span class="coffee_tea_margin">3$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">White tea<span>3$</span></h3>
+                            <h3 class="name_price">White tea<span class="coffee_tea_margin">3$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Yellow tea<span>3$</span></h3>
+                            <h3 class="name_price">Yellow tea<span class="coffee_tea_margin">3$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Oolong tea<span>4$</span></h3>
+                            <h3 class="name_price">Oolong tea<span class="coffee_tea_margin">4$</span></h3>
                         </li>
                         <li>
-                            <h3 class="name_price">Puer tea<span>5$</span></h3>
+                            <h3 class="name_price">Puer tea<span class="coffee_tea_margin">5$</span></h3>
                         </li>
                     </ul>
                 </div>
             </div>
-            <h2 class="coffee_tea heading_coctails">Coctails</h2>
+            <h2 class="coffee_tea_name coctails_name">Coctails</h2>
             <div class="container_coctails">
-                <div class="wrapper_coctails">
+                <div class="wrapper_coctails coctails_padding">
                     <ul class="price_list">
                         <li>
                             <h3 class="name_price">Mojito<span>10$</span></h3>
-                            <p class="composition">White rum- 50 ml, sugar syrup- 20 ml, soda- 50 ml,<br>
-                                mint- 15 grams,lime - 3 wedgesashed potatoes and<br>
+                            <p class="composition">White rum- 50 ml, sugar syrup- 20 ml, soda- 50 ml,
+                                mint- 15 grams,lime - 3 wedgesashed potatoes and
                                 mustard.</p>
                         </li>
                         <li>
                             <h3 class="name_price">Pina colada<span>11$</span></h3>
-                            <p class="composition">White rum- 50 ml, coconut syrup- 30 ml,<br>
+                            <p class="composition">White rum- 50 ml, coconut syrup- 30 ml,
                                 pineapple juice - 100 ml</p>
                         </li>
                         <li>
                             <h3 class="name_price">Cosmopolitan<span>9$</span></h3>
-                            <p class="composition">Orange liqueur- 10 ml, cranberry juice- 30 ml,<br>
-                                lemon juice- 10 ml, vodka- 30 ml,<br>
+                            <p class="composition">Orange liqueur- 10 ml, cranberry juice- 30 ml,
+                                lemon juice- 10 ml, vodka- 30 ml,
                                 orange essential oil- 1 slice</p>
                         </li>
                         <li>
                             <h3 class="name_price">Tequila Sunrise<span>10$</span></h3>
-                            <p class="composition">Tequila- 50 ml, orange juice- 150 ml, syrup Grenadine<br>
+                            <p class="composition">Tequila- 50 ml, orange juice- 150 ml, syrup Grenadine
                                 (pomegranate syrup) v- 10 ml</p>
                         </li>
                     </ul>
@@ -310,8 +308,8 @@
                         </li>
                         <li>
                             <h3 class="name_price">Bloody Mary<span>11$</span></h3>
-                            <p class="composition">Vodka - 50 ml, tomato juice - 100 ml, lemon juice- 10 ml,<br>
-                                fresh celery- 10 g, watchester sauce- 5 drops, tabasco- 3<br>
+                            <p class="composition">Vodka - 50 ml, tomato juice - 100 ml, lemon juice- 10 ml,
+                                fresh celery- 10 g, watchester sauce- 5 drops, tabasco- 3
                                 drops, salt, ground pepper</p>
                         </li>
                     </ul>
@@ -325,13 +323,13 @@
         <div class="container_name">
             <h2 class="footer_name">BOSCO</h2>
         </div>
-        <div class="navigation">
+        <nav class="navigation">
             <a href="menu.html" class="nav_items">Menu</a>
             <a href="reservation.html" class="nav_items">Reservations</a>
             <a href="index.html" class="nav_items">News</a>
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
-        </div>
+        </nav>
         <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
