--- a/reservation.html
+++ b/reservation.html
@@ -21,7 +21,7 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="wrapper_nav">
+            <nav class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
                     <span></span>
@@ -32,18 +32,18 @@
                     <li><a href="features.html" class="nav_items">Features</a></li>
                     <li><a href="contacts.html" class="nav_items">Contacts</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
         <div class="wrapper_welcome">
-            <h1 class="welcome">Welcome</h1>
-            <h1 class="welcome_heading">BOSCO reservation</h1>
-            <span class="line_reservation"></span>
+            <h1 class="welcome_name">Welcome</h1>
+            <h1 class="heading_name">BOSCO reservation</h1>
+            <span class="line_name"></span>
         </div>
     </header>
 
     <main>
         <section class="container_gallery">
-            <h2 class="gallery_heading">Gallery</h2>
+            <h2 class="gallery_name">Gallery</h2>
             <div class="wrapper_gallery">
                 <img src="images/restaurant_1.png" alt="inside" class="gallery_img" />
                 <img src="images/restaurant_2.png" alt="inside" class="gallery_img" />
@@ -65,8 +65,8 @@
 
         <section class="container_form">
             <div class="wrapper_form">
-                <h2 class="form_heading">Make a reservation</h2>
-                <span class="line_reservation line_indent"></span>
+                <h2 class="form_name">Make a reservation</h2>
+                <span class="line_name line_indent"></span>
                 <form action="https://getform.io/f/390da523-9612-4f95-a1dd-fb42ab97a73c" class="form_font">
                     <div class="date_person">
                         <div class="date">
@@ -105,13 +105,13 @@
         <div class="container_name">
             <h2 class="footer_name">BOSCO</h2>
         </div>
-        <div class="navigation">
+        <nav class="navigation">
             <a href="menu.html" class="nav_items">Menu</a>
             <a href="reservation.html" class="nav_items">Reservations</a>
             <a href="index.html" class="nav_items">News</a>
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
-        </div>
+        </nav>
         <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
